[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="eyeon"
version="0.1"
description="EyeON update tracking utility"
requires-python=">=3.9"
# author="LLNL"
dependencies=[
    "jsonschema == 4.17",
    "python-magic == 0.4.27",
    "pefile == 2023.2.7",
]
